# ai-sandbox

./: .gitignore  README.md  pyproject.toml
src/whistt/: __init__.py  __main__.py  main.py  transcriber.py
src/ytcrawl/: __main__.py  crawler.py  db.py  youtube_cc_collector.py
src/ytcrawl/crawl/: __init__.py  details.py  download.py  search.py  youtube.py
src/ytcrawl/crawl/youtube/: __init__.py  search.py
src/ytcrawl/crawl/youtube/channel/: __init__.py  cspan.py
src/ytcrawl/db/: __init__.py  core.py  video_download_attempts.py  video_review_segments.py  video_reviews.py  videos.py  videos_detail.py  youtube_search_runs.py
src/ytcrawl/download/: __main__.py
src/ytcrawl/downloader/: __init__.py  __main__.py  youtube.py
src/ytcrawl/review/: app.py  schemas.py  service.py
src/ytcrawl/review/static/: index.html  review.css  review.js
src/ytcrawl/search/: __main__.py  youtube.py  youtube_channel.py  youtube_detail.py  youtube_uploads.py
tests/: test_youtube_downloader.py  test_ytcrawl_main.py  test_ytcrawl_review_media_path.py
